--- a/Game.vcxproj.filters
+++ b/Game.vcxproj.filters
@@ -3,6 +3,7 @@
   <ItemGroup>
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\ThirdParty\remotery\Remotery.c" />
+    <ClCompile Include="src\Simulation.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
@@ -106,6 +107,7 @@
     <ClInclude Include="src\ThirdParty\SFML\SFML\OpenGL.hpp" />
     <ClInclude Include="src\ThirdParty\SFML\SFML\System.hpp" />
     <ClInclude Include="src\ThirdParty\SFML\SFML\Window.hpp" />
+    <ClInclude Include="src\Simulation.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="src\ThirdParty\SFML\SFML\Audio\SoundFileFactory.inl" />
