--- a/Game.vcxproj.filters
+++ b/Game.vcxproj.filters
@@ -4,6 +4,7 @@
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\ThirdParty\remotery\Remotery.c" />
     <ClCompile Include="src\Simulation.cpp" />
+    <ClCompile Include="src\Visualization.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
@@ -108,6 +109,7 @@
     <ClInclude Include="src\ThirdParty\SFML\SFML\System.hpp" />
     <ClInclude Include="src\ThirdParty\SFML\SFML\Window.hpp" />
     <ClInclude Include="src\Simulation.h" />
+    <ClInclude Include="src\Visualization.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="src\ThirdParty\SFML\SFML\Audio\SoundFileFactory.inl" />
