--- a/Game.vcxproj
+++ b/Game.vcxproj
@@ -53,7 +53,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>..\src\ThirdParty\easylogging;..\src\ThirdParty\SFML;..\src\ThirdParty\remotery;$(IncludePath)</IncludePath>
+    <IncludePath>src\ThirdParty\easylogging;src\ThirdParty\SFML;src\ThirdParty\remotery;$(IncludePath)</IncludePath>
     <LibraryPath>$(LibraryPath)</LibraryPath>
     <EnableCppCoreCheck>true</EnableCppCoreCheck>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
@@ -63,7 +63,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>_DEBUG;NOMINMAX;NOGDI;SFML_STATIC;_WINDOWS;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>ELPP_THREAD_SAFE;_DEBUG;NOMINMAX;NOGDI;SFML_STATIC;_WINDOWS;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpplatest</LanguageStandard>
@@ -91,17 +91,18 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>NDEBUG;NOMINMAX;NOGDI;SFML_STATIC;_CRT_SECURE_NO_WARNINGS;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>ELPP_THREAD_SAFE;NDEBUG;NOMINMAX;NOGDI;SFML_STATIC;_CRT_SECURE_NO_WARNINGS;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
-      <ForcedIncludeFiles>StdAfx.h</ForcedIncludeFiles>
+      <ForcedIncludeFiles>
+      </ForcedIncludeFiles>
       <ConformanceMode>true</ConformanceMode>
       <EnableModules>true</EnableModules>
       <BufferSecurityCheck>true</BufferSecurityCheck>
@@ -112,13 +113,14 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>sfml-system-s.lib;sfml-audio-s.lib;openal32.lib;flac.lib;vorbisenc.lib;vorbisfile.lib;vorbis.lib;ogg.lib;opengl32.lib;winmm.lib;gdi32.lib;freetype.lib;sfml-graphics-s.lib;sfml-window-s.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\src\ThirdParty\SFML\SFML\lib</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>src\ThirdParty\SFML\SFML\lib</AdditionalLibraryDirectories>
       <LinkTimeCodeGeneration>UseLinkTimeCodeGeneration</LinkTimeCodeGeneration>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Simulation.cpp" />
+    <ClCompile Include="src\ThirdParty\easylogging\easylogging\easylogging++.cc" />
     <ClCompile Include="src\ThirdParty\remotery\Remotery.c" />
     <ClCompile Include="src\Visualization.cpp" />
   </ItemGroup>
@@ -126,6 +128,7 @@
     <ClInclude Include="resource.h" />
     <ClInclude Include="src\Profiler.h" />
     <ClInclude Include="src\Simulation.h" />
+    <ClInclude Include="src\ThirdParty\easylogging\easylogging\easylogging++.h" />
     <ClInclude Include="src\ThirdParty\remotery\Remotery.h" />
     <ClInclude Include="src\ThirdParty\SFML\SFML\Audio.hpp" />
     <ClInclude Include="src\ThirdParty\SFML\SFML\Audio\AlResource.hpp" />
@@ -225,6 +228,7 @@
     <ClInclude Include="src\ThirdParty\SFML\SFML\Window\Window.hpp" />
     <ClInclude Include="src\ThirdParty\SFML\SFML\Window\WindowHandle.hpp" />
     <ClInclude Include="src\ThirdParty\SFML\SFML\Window\WindowStyle.hpp" />
+    <ClInclude Include="src\vec2f.h" />
     <ClInclude Include="src\Visualization.h" />
   </ItemGroup>
   <ItemGroup>
