--- a/Game.vcxproj.filters
+++ b/Game.vcxproj.filters
@@ -7,6 +7,7 @@
     <ClCompile Include="src\Visualization.cpp" />
     <ClCompile Include="src\ThirdParty\easylogging\easylogging\easylogging++.cc" />
     <ClCompile Include="src\SpatialIndex.cpp" />
+    <ClCompile Include="src\Settings.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
