--- a/Game.vcxproj
+++ b/Game.vcxproj
@@ -45,7 +45,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>src\ThirdParty\easylogging;src\ThirdParty\SFML;src\ThirdParty\remotery;$(IncludePath)</IncludePath>
+    <IncludePath>src\ThirdParty\easylogging;src\ThirdParty\SFML;$(IncludePath)</IncludePath>
     <LibraryPath>$(LibraryPath)</LibraryPath>
     <EnableCppCoreCheck>true</EnableCppCoreCheck>
     <CodeAnalysisRuleSet>NativeRecommendedRules.ruleset</CodeAnalysisRuleSet>
@@ -53,7 +53,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>src\ThirdParty\easylogging;src\ThirdParty\SFML;src\ThirdParty\remotery;$(IncludePath)</IncludePath>
+    <IncludePath>src\ThirdParty\easylogging;src\ThirdParty\SFML;$(IncludePath)</IncludePath>
     <LibraryPath>$(LibraryPath)</LibraryPath>
     <EnableCppCoreCheck>true</EnableCppCoreCheck>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
@@ -125,7 +125,6 @@
     <ClCompile Include="src\Simulation.cpp" />
     <ClCompile Include="src\SpatialIndex.cpp" />
     <ClCompile Include="src\ThirdParty\easylogging\easylogging\easylogging++.cc" />
-    <ClCompile Include="src\ThirdParty\remotery\Remotery.c" />
     <ClCompile Include="src\Visualization.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -136,7 +135,6 @@
     <ClInclude Include="src\SpatialIndex.h" />
     <ClInclude Include="src\ThirdParty\args\args.hxx" />
     <ClInclude Include="src\ThirdParty\easylogging\easylogging\easylogging++.h" />
-    <ClInclude Include="src\ThirdParty\remotery\Remotery.h" />
     <ClInclude Include="src\ThirdParty\SFML\SFML\Audio.hpp" />
     <ClInclude Include="src\ThirdParty\SFML\SFML\Audio\AlResource.hpp" />
     <ClInclude Include="src\ThirdParty\SFML\SFML\Audio\Export.hpp" />
